--- a/package.json
+++ b/package.json
@@ -4,8 +4,17 @@
   "description": "Application allowing you to post messages on a wall for a coding challenge",
   "main": "index.js",
   "scripts": {
-    "test": "export NODE_ENV=test && jasmine"
+    "test": "export NODE_ENV=test && jasmine",
+    "start": "node src/server.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "jasmine": "^3.0.0",
+    "request": "^2.83.0"
+  },
+  "dependencies": {
+    "express": "^4.16.2",
+    "nodemon": "^1.17.3"
+  }
 }
